Edit profile and account vis edits

--- a/TermProject/Views/EditProfile/Index.cshtml
+++ b/TermProject/Views/EditProfile/Index.cshtml
@@ -32,10 +32,10 @@
                 @if (ViewBag.InvalidNumber != null)
                 {
                     <div style="color:red">
-                        @ViewBag.AccountUpdated
+                        @ViewBag.InvalidNumber
                     </div>
                 }
-
+                
 
                 <br />
                 <br />
