--- a/TermProject/Views/Likes/Index.cshtml
+++ b/TermProject/Views/Likes/Index.cshtml
@@ -48,11 +48,21 @@
 
                     <form asp-controller="Main" asp-action="ViewProfile" method="post">
                             <input type="hidden" name="username" value="@profile.userAccount.userName" />
-                            <button type="submit" class="btn btn-danger">Delete</button>
                             <button type="submit" class="btn btn-info" style="color:white">View Profile</button>
-                            <button type="submit" class="btn btn-dark">Home</button>
+                        
                     </form>
+                    <br />
 
+                      <form asp-controller="Likes" asp-action="RemoveLike" method="post">
+                           <input type="hidden" name="username" value="@profile.userAccount.userName" />
+                             <button type="submit" class="btn btn-danger">Delete</button>
+                          
+                      </form>
+                      <br />
+                      <form asp-controller="Dashboard" asp-action="Index" method="post">
+
+                          <button type="submit" class="btn btn-dark">Home</button>
+                      </form>
                     <br />
                 </div>
             </div>
