--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -44,6 +44,11 @@
                            Edit Profile
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="My2048" asp-action="Index" id="lnk2048">
+                            2048
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
