--- a/TermProject/Views/Shared/LoggedOutLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedOutLayout.cshtml
@@ -44,6 +44,11 @@
                             Profile
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link disabled">
+                            2048
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
