--- a/TermProject/Views/Shared/My2048Layout.cshtml
+++ b/TermProject/Views/Shared/My2048Layout.cshtml
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="~/js/2048.js"></script>
+    <link href="~/css/2048.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
-    <link href="~/css/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-black">
@@ -18,48 +20,44 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link active" asp-controller="Home" asp-action="Index" id="lnkHome">Home</a>
+                        <a class="nav-link active" asp-controller="Dashboard" asp-action="Index" id="lnkHome">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a class="nav-link active" asp-controller="Main" asp-action="Index" id="lnkMain">
                             Search
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a class="nav-link active" asp-controller="Likes" asp-action="Index" id="lnkLikes">
                             Likes
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a class="nav-link active" asp-controller="Matches" asp-action="Index" id="lnkMatches">
                             Matches
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a href="#" class="nav-link active">
                             Dates
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
-                            Profile
+                        <a class="nav-link active" asp-controller="EditProfile" asp-action="Index" id="lnkProfile">
+                            Edit Profile
                         </a>
-                    </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a class="nav-link active" asp-controller="My2048" asp-action="Index" id="lnk2048">
                             2048
                         </a>
                     </li>
-                   
+                    </li>
                 </ul>
             </div>
         </div>
-        <form asp-controller="Home" asp-action="RedirectLogin" method="post">
-            <button type="submit" id="btnLogin" class="btn btn-danger">Login</button>
-        </form>
 
-        <form asp-controller="Home" asp-action="RedirectSignUp" method="post">
-            <button type="submit" id="btnSignup" class="btn btn-danger m-3">Sign-up</button>
+        <form asp-controller="Home" asp-action="RedirectLogOut" method="post">
+            <button type="submit" id="btnLogOut" class="btn btn-danger m-3">Log Out</button>
         </form>
     </nav>
 
@@ -68,5 +66,3 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
-
-
