--- a/TermProject/Views/Likes/Index.cshtml
+++ b/TermProject/Views/Likes/Index.cshtml
@@ -13,6 +13,18 @@
 <div class="jumbotron jumbotron-fluid" style="background-color:indianred">
     <div class="container">
         
+        @if (Model.Count == 0)
+        {
+            
+        <h2 style="color:white">You Currently Have No Likes, Check Back Soon!</h2>
+        <br />
+          <form asp-controller="Dashboard" asp-action="Index" method="post">
+
+                          <button type="submit" class="btn btn-dark">Return Home</button>
+                      </form>
+        
+        }
+
         @for (int i = 0; i < Model.Count; i++)
         {
            
@@ -46,11 +58,13 @@
 
                        
 
-                    <form asp-controller="Main" asp-action="ViewProfile" method="post">
+                    <form asp-controller="Likes" asp-action="ViewProfile" method="post">
                             <input type="hidden" name="username" value="@profile.userAccount.userName" />
                             <button type="submit" class="btn btn-info" style="color:white">View Profile</button>
                         
                     </form>
+
+
                     <br />
 
                       <form asp-controller="Likes" asp-action="RemoveLike" method="post">
