--- a/TermProject/Views/Profile/Index.cshtml
+++ b/TermProject/Views/Profile/Index.cshtml
@@ -82,6 +82,9 @@
         <h4>Book: @Model.book</h4>
         <br />
         <h4>Movie: @Model.movie</h4>
+        <br />
+        <h3 style="color:fuchsia">2048 Score: @Model.finalScore</h3>
+
     </div>
     <div class="container" style="text-align:center;">
         <br />
