--- a/TermProject/Views/SignUp/Index.cshtml
+++ b/TermProject/Views/SignUp/Index.cshtml
@@ -10,7 +10,7 @@
 }
 
 
-    <form asp-controller="SignUp" asp-action="CreateAccount" method="POST">
+<form asp-controller="SignUp" asp-action="CreateAccount" method="POST">
         <br />
         <br />
 
@@ -76,7 +76,7 @@
                 <span asp-validation-for="Answer2" class="error-message"></span>
                 <br />
 
-                <label asp-for="Answer3"> Question 3:  What was your favorite childhood toy?</label>
+            <label asp-for="Answer3"> Security Question 3:  What was your favorite childhood toy?</label>
                 <br />
                 <input asp-for="Answer3" />
                 <br />
