--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -35,13 +35,18 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" asp-controller="Dates" asp-action="Index" id="lnkDates">
                             Dates
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" asp-controller="UserDateRequests" asp-action="Index" id="lnkDateRequests">
+                            Date Requests
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" asp-controller="EditProfile" asp-action="Index" id="lnkProfile">
-                           Edit Profile
+                            Edit Profile
                         </a>
                     </li>
                     <li class="nav-item">
