--- a/TermProject/Views/Shared/LoggedOutLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedOutLayout.cshtml
@@ -41,6 +41,11 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link disabled">
+                            Date Requests
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link disabled">
                             Profile
                         </a>
                     </li>
