--- a/TermProject/Views/Shared/LoginLayout.cshtml
+++ b/TermProject/Views/Shared/LoginLayout.cshtml
@@ -40,6 +40,11 @@
                             Dates
                         </a>
                     </li>
+                       <li class="nav-item">
+                        <a href="#" class="nav-link disabled">
+                            Date Requests
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link disabled">
                             Profile
