--- a/TermProject/Views/Shared/MainLayout.cshtml
+++ b/TermProject/Views/Shared/MainLayout.cshtml
@@ -36,8 +36,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" asp-controller="Dates" asp-action="Index" id="lnkDates">
                             Dates
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="UserDateRequests" asp-action="Index" id="lnkDateRequests">
+                            Date Requests
                         </a>
                     </li>
                     <li class="nav-item">
