--- a/TermProject/Views/Dates/Index.cshtml
+++ b/TermProject/Views/Dates/Index.cshtml
@@ -8,100 +8,76 @@
     Layout = "MainLayout";
 }
 
-<div class="jumbotron jumbotron-fluid" style="background-color:lightpink">   
-        <h1 style=" margin-top:5rem;text-align:center; color:darkred ">Dates</h1>
+<div class="jumbotron jumbotron-fluid" style="background-color:lightpink">
+    <h1 style="margin-top:5rem;text-align:center; color:darkred">Dates</h1>
 </div>
 <div class="jumbotron jumbotron-fluid" style="background-color:aqua">
     <div class="container">
+        <!-- Message if date was updated-->
+        @if (ViewBag.DateUpdated != null)
+        {
+            <div style="color:white; padding-top: 1%; margin:0 auto">
+                <h3>Message: @ViewBag.DateUpdated</h3>
+            </div>
+        }
 
-
-          <!-- Message if profile was liked-->
-                @if (ViewBag.LikedUser != null)
-                {
-                    <div style="color:lawngreen; padding-top: 1%; margin:0 auto">
-                       <h3>Message: @ViewBag.LikedUser</h3> 
-                    </div>
-                }
-
-
-        
         @if (Model.Count == 0)
         {
-            
-        <h2 style="color:white">You Currently Have No Dates, Check Back Soon!</h2>
-        <br />
-          <form asp-controller="Dashboard" asp-action="Index" method="post">
-
-                          <button type="submit" class="btn btn-dark">Return Home</button>
-                      </form>
-        
+            <h2 style="color:white">You Currently Have No Dates, Check Back Soon!</h2>
+            <br />
+            <form asp-controller="Dashboard" asp-action="Index" method="post">
+                <button type="submit" class="btn btn-dark">Return Home</button>
+            </form>
         }
 
-        @for (int i = 0; i < Model.Count; i++)
-        {
-           
-            var profile = Model[i];
-            <div class="jumbotron jumbotron-fluid" style="background-color:lightblue; padding:5rem;">
-            @if (i % 2 == 0)
+        <div class="row">
+            @foreach (var profile in Model)
             {
-                // Start a new row
-                @:<div class="row">
-            }
-            
-            
-                <div id="crdCard" class="card text-center" style=" margin:1rem;border-color:black;">
-                    <div class="card-body">
-                        @if (!string.IsNullOrEmpty(profile.profileImage))
-                        {
-                            <img src="@profile.profileImage" alt="Profile Image" width="200" height="200">
-                        }
-                        else
-                        {
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/2048px-No_image_available.svg.png" alt="Stock Image" width="200" height="200">
-                        }
-                        <h2 style="color:darkred">@profile.userAccount.firstName @profile.userAccount.lastName</h2>
-                    
-                        <h4>@profile.city, @profile.state</h4>
+                <div class="col-md-6">
+                    <div class="card text-center" style="margin-bottom: 20px;">
+                        <div class="card-header">
+                            @if (!string.IsNullOrEmpty(profile.profileImage))
+                            {
+                                <img src="@profile.profileImage" alt="Profile Image" width="150" height="150" class="float-left mr-3">
+                            }
+                            else
+                            {
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/2048px-No_image_available.svg.png" alt="Stock Image" width="100" height="100" class="float-left mr-3">
+                            }
+                            <h4 class="card-title" style="margin: 0 auto;">@profile.userAccount.firstName @profile.userAccount.lastName</h4>
+                            <br />
+                            <p class="card-text">@profile.city, @profile.state</p>
+                            <p class="card-text">Address: @profile.address</p>
+                            <p class="card-text">Phone Number: @profile.phoneNumber</p>
 
-                           <p>Address: @profile.address</p>
+                        </div>
+                        <div class="card-body">
 
-                         <p>Phone Number: @profile.phoneNumber</p>
-
-                       
-
-                               
-                    <form asp-controller="Dates" asp-action="Date details" method="post" >
-                              <input type="hidden" name="username" value="@profile.userAccount.userName" />
-                              <input type="hidden" name="name" value="@profile.userAccount.firstName" />
-                             <button type="submit" class="btn btn-success">Date Details</button>
-                    </form>
-                    <br />    
-
-                    <form asp-controller="Date" asp-action="ViewProfile" method="post">
-                            <input type="hidden" name="username" value="@profile.userAccount.userName" />
-                            <button type="submit" class="btn btn-info" style="color:white">View Profile</button>
-                        
-                    </form>
-                      <br />
-                      <form asp-controller="Dashboard" asp-action="Index" method="post">
-
-                          <button type="submit" class="btn btn-dark">Home</button>
-                      </form>
-                    <br />
+                            <form asp-controller="Dates" asp-action="DateDetails" method="post">
+                                <input type="hidden" name="username" value="@profile.userAccount.userName" />
+                                <input type="hidden" name="name" value="@profile.userAccount.firstName" />
+                                <button type="submit" class="btn btn-success">Date Details</button>
+                            </form>
+                            <br />
+                            <form asp-controller="Dates" asp-action="ViewProfile" method="post">
+                                <input type="hidden" name="username" value="@profile.userAccount.userName" />
+                                <button type="submit" class="btn btn-info" style="color:white">View Profile</button>
+                            </form>
+                            <br />
+                            <form asp-controller="Dashboard" asp-action="Index" method="post">
+                                <button type="submit" class="btn btn-dark">Home</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            @if (i % 2 == 0 || i == Model.Count - 1)
-            {
-                // End the current row
-                @:</div>
             }
-            </div>
-        }
+        </div>
     </div>
 </div>
-        <footer class="bg-dark">
-            <div class="container text-light text-center">
-                <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
-            </div>
-        </footer>
+
+<footer class="bg-dark">
+    <div class="container text-light text-center">
+        <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
+    </div>
+</footer>
+
