--- a/TermProject/Views/Profile/Index.cshtml
+++ b/TermProject/Views/Profile/Index.cshtml
@@ -43,6 +43,17 @@
         <br />
         <h4>@Model.city, @Model.state</h4>
         <br />
+
+        @if (@ViewBag.ShowSensitiveInfo == true)
+        {
+
+            <h4>Address: @Model.address</h4>
+            <br />
+            <h4> Phone Number: @Model.phoneNumber</h4>
+            <br />
+
+        }
+
         <h4>"@Model.description"</h4>
         <br />
     </div>
