--- a/TermProject/Views/UserDateRequests/Index.cshtml
+++ b/TermProject/Views/UserDateRequests/Index.cshtml
@@ -1,7 +1,84 @@
-﻿@{
+﻿@model List<TermProjectAPI.User>
+@{
     ViewData["Title"] = "Date Requests";
 }
 
 @{
     Layout = "MainLayout";
 }
+
+<div class="jumbotron jumbotron-fluid" style="background-color:lightpink">
+    <h1 style="margin-top:5rem;text-align:center; color:darkred">Date Requests</h1>
+</div>
+<div class="jumbotron jumbotron-fluid" style="background-color:gray">
+    <div class="container">
+        <!-- Message if date was accepted-->
+        @if (ViewBag.requestAccepted != null)
+        {
+            <div style="color:lightgreen; padding-top: 1%; margin:0 auto">
+                <h3>Message: @ViewBag.requestAccepted</h3>
+            </div>
+        }
+
+        @if (Model.Count == 0)
+        {
+            <h2 style="color:white">You Currently Have No Dates Requests Check Back Soon!</h2>
+            <br />
+            <form asp-controller="Dashboard" asp-action="Index" method="post">
+                <button type="submit" class="btn btn-dark">Return Home</button>
+            </form>
+        }
+
+        <div class="row">
+            @foreach (var profile in Model)
+            {
+                <div class="col-md-6">
+                    <div class="card text-center" style="margin-bottom: 20px;">
+                        <div class="card-header">
+                            @if (!string.IsNullOrEmpty(profile.profileImage))
+                            {
+                                <img src="@profile.profileImage" alt="Profile Image" width="150" height="150" class="float-left mr-3">
+                            }
+                            else
+                            {
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/2048px-No_image_available.svg.png" alt="Stock Image" width="100" height="100" class="float-left mr-3">
+                            }
+                            <h4 class="card-title" style="margin-top: 15px;">@profile.userAccount.firstName </h4>
+                            <p>@profile.age</p>
+
+                            <p>@profile.city, @profile.state</p>
+                        </div>
+                        <div class="card-body">
+               
+                            <form asp-controller="UserDateRequests" asp-action="AcceptDate" method="post">
+                                <input type="hidden" name="username" value="@profile.userAccount.userName" />
+                                <input type="hidden" name="name" value="@profile.userAccount.firstName" />
+                                <button type="submit" class="btn btn-success">Accept Date</button>
+                            </form>
+                            <br />
+                            <form asp-controller="UserDateRequests" asp-action="DeclineDate" method="post">
+                                <input type="hidden" name="username" value="@profile.userAccount.userName" />
+                                <button type="submit" class="btn btn-danger">Decline Date</button>
+                            </form>
+                            <br />
+                            <form asp-controller="UserDateRequests" asp-action="ViewProfile" method="post">
+                                <input type="hidden" name="username" value="@profile.userAccount.userName" />
+                                <button type="submit" class="btn btn-info" style="color:white">View Profile</button>
+                            </form>
+                            <br />
+                            <form asp-controller="Dashboard" asp-action="Index" method="post">
+                                <button type="submit" class="btn btn-dark">Home</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
+<footer class="bg-dark">
+    <div class="container text-light text-center">
+        <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
+    </div>
+</footer>
