3rd porject functioning hopefully, and bypass

--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -58,7 +58,9 @@
             </div>
         </div>
 
-        <form asp-controller="Login" asp-action="Index" method="post">
+        <form asp-controller="Home" asp-action="Index" method="post">
+        
+
             <button type="submit" id="btnLogOut" class="btn btn-danger m-3">Log Out</button>
         </form>
     </nav>
