--- a/TermProject/Views/Shared/LoggedOutLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedOutLayout.cshtml
@@ -57,11 +57,11 @@
                 </ul>
             </div>
         </div>
-        <form asp-controller="Home" asp-action="RedirectLogin" method="post">
+        <form asp-controller="Login" asp-action="Index" method="post">
             <button type="submit" id="btnLogin" class="btn btn-danger">Login</button>
         </form>
 
-        <form asp-controller="Home" asp-action="RedirectSignUp" method="post">
+        <form asp-controller="SignUp" asp-action="Index" method="post">
             <button type="submit" id="btnSignup" class="btn btn-danger m-3">Sign-up</button>
         </form>
     </nav>
