--- a/TermProject/Views/Shared/My2048Layout.cshtml
+++ b/TermProject/Views/Shared/My2048Layout.cshtml
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <form asp-controller="Home" asp-action="RedirectLogOut" method="post">
+        <form asp-controller="Home" asp-action="Index" method="post">
             <button type="submit" id="btnLogOut" class="btn btn-danger m-3">Log Out</button>
         </form>
     </nav>
