--- a/TermProject/Views/Shared/MainLayout.cshtml
+++ b/TermProject/Views/Shared/MainLayout.cshtml
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <form asp-controller="Home" asp-action="Index" method="post">
+        <form asp-controller="Logout" asp-action="Index" method="post">
             <button type="submit" id="btnLogOut" class="btn btn-danger m-3">Log Out</button>
         </form>
     </nav>
